--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <body>
 
 <h1> Endangered Animals </h1>
-  <p>My first paragraph.</p>
+  <p> Although (unfortunately) there are many endangered species here are the top 10 most endangered species in the world ( and how many of them are left in the wild:
+    Javan Rhinocerous - 67
+    Vaquita - 9
+    Mountain Gorilla - 880
+    Tiger - 3890
+    Asian Elephant- 45,000
+    Orangutangs - 60,000
+    Leatherback Turtles - 2300
+    Snow Leapords- 5000
+    Irrawaddy Dolphins - 92
+    Bluefin Tuna - 1.6 million.</p>
 
 </body>
 </html>
