--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 
 <h1> Endangered Animals </h1>
   <p> Although (unfortunately) there are many endangered species here are the top 10 most endangered species in the world ( and how many of them are left in the wild:
-    Javan Rhinocerous - 67
-    Vaquita - 9
-    Mountain Gorilla - 880
-    Tiger - 3890
-    Asian Elephant- 45,000
-    Orangutangs - 60,000
-    Leatherback Turtles - 2300
-    Snow Leapords- 5000
-    Irrawaddy Dolphins - 92
-    Bluefin Tuna - 1.6 million.</p>
+    <li>Javan Rhinocerous - 67</li>
+    <li>Vaquita - 9</li>
+    <li<Mountain Gorilla - 880</li>
+  <li>Tiger - 3890</li>
+  <li>Asian Elephant- 45,000</li>
+  <li>Orangutangs - 60,000</li>
+  <li>Leatherback Turtles - 2300</li>
+  <li>Snow Leapords- 5000</li>
+  <li>Irrawaddy Dolphins - 92</li>
+  <li>Bluefin Tuna - 1.6 million. </li> </p>
 
 </body>
 </html>
