--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
   <li>Irrawaddy Dolphins - 92</li>
   <li>Bluefin Tuna - 1.6 million. </li> </p>
 
+<h2> Facts About Endangered Animals <h2> 
+  
+ <li> - Scientists have estimated that we are loosing animals 1000-10,000 times faster than before.
+   
 </body>
 </html>
+
