--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <p> <li> - Scientists have estimated that we are loosing animals 1000-10,000 times faster than before. </li>
    <li> - From our viewpoint as of now as many as 30-50% of species will be extinct my the middle of this century </li>
   <li> - Dozens of species are becomming extinct/endangered each day.</li>
-   <li> - The main reasons for endangered species endangerment are loss of habitat and loss of generic variation. </li> </p>
+   <li> - The main reasons for endangered species endangerment are loss of habitat and loss of generic variation. </li> 
+  </p>
 </body>
 </html>
 
