--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <li>Irrawaddy Dolphins - 92</li>
   <li>Bluefin Tuna - 1.6 million. </li> </p>
 
-<h2> Facts About Endangered Animals <h2> 
+<h2> Facts About Endangered Animals </h2> 
   
-<p> <li> - Scientists have estimated that we are loosing animals 1000-10,000 times faster than before. </li>
-   <li> - From our viewpoint as of now as many as 30-50% of species will be extinct my the middle of this century </li>
-  <li> - Dozens of species are becomming extinct/endangered each day.</li>
-   <li> - The main reasons for endangered species endangerment are loss of habitat and loss of generic variation. </li> 
+<p> <li> Scientists have estimated that we are loosing animals 1000-10,000 times faster than before. </li>
+   <li> From our viewpoint as of now as many as 30-50% of species will be extinct my the middle of this century </li>
+  <li> Dozens of species are becomming extinct/endangered each day.</li>
+   <li> The main reasons for endangered species endangerment are loss of habitat and loss of generic variation. </li> 
   </p>
 </body>
 </html>
