--- a/index.html
+++ b/index.html
@@ -24,4 +24,6 @@
   </p>
 </body>
 </html>
+<h2> Explanation of Endangered species </h2>
+<p> <li> An endangered species is a species that is likely to become extinct in the future </li> </p>
 
